# reprospect

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.py  test_load.py  typos.toml
cpp/cuda-helpers/: CMakeLists.txt
cpp/cuda-helpers/errors/: CMakeLists.txt  cuda.hpp  cuda_runtime.hpp
cpp/reprospect/: CMakeLists.txt
cpp/reprospect/errors/: CMakeLists.txt  cuda.hpp  cuda_runtime.hpp
docs/: .gitignore  CMakeLists.txt  CODE_QUALITY.md  Makefile
docs/source/: analysis.rst  api_reference.rst  caching.rst  conf.py  development.rst  examples.rst  getting-started.rst  index.rst  install.rst  overview.rst  references.bib  resources.rst  schematic.tikz  tests.rst  user_guide.rst
docs/source/examples/: cuda.rst  kokkos.rst
docs/source/examples/cuda/: example_atomics.ipynb  virtual_functions.rst
docs/source/examples/kokkos/: atomic.rst  complex.rst  graph.rst  half.rst  static_batch_size.rst  view.rst
docs/source/getting-started/: example_atomics.ipynb  example_binary_analysis.ipynb
docs/source/tests/: assets.rst  compilation.rst  cublas.rst  extensibility.rst  integration.rst  nvtx.rst  parameters.rst  python.rst  test.rst  testing.rst  tools.rst  utils.rst
examples/: CMakeLists.txt
examples/cuda/: CMakeLists.txt
examples/cuda/instructions/: CMakeLists.txt  example_fma.cpp  example_fma.py
examples/cuda/virtual_functions/: CMakeLists.txt  example_dispatch.cpp  example_dispatch.py
examples/kokkos/: CMakeLists.txt  benchmarking.hpp  benchmarking.main.cpp  example_integration.cpp  pyplot.py
examples/kokkos/atomic/: CMakeLists.txt  add.hpp  add.py  cas.py  desul.py  example_add_complex128.cpp  example_add_complex128.py  example_add_complex64.cpp  example_add_complex64.py  example_add_double256.cpp  example_add_double256.py  example_add_int128.cpp  example_add_int128.py
examples/kokkos/complex/: CMakeLists.txt  NewtonFractal.hpp  distance.hpp  example_alignment.cpp  example_alignment.py  example_division.cpp  example_division.hpp  example_division.py  example_division_benchmarking.cpp  example_division_benchmarking.py  example_division_compliance.cpp  example_division_plot.cpp  example_division_plot.py  example_division_test.cpp  floatingpointtraits.hpp
examples/kokkos/graph/: CMakeLists.txt  example_definition.cpp  example_definition.py  example_dispatch.cpp  example_dispatch.py  example_then.cpp  example_then.py
examples/kokkos/half/: CMakeLists.txt  example_math.cpp  example_math.py
examples/kokkos/static_batch_size/: CMakeLists.txt  example_static_batch_size.cpp  example_static_batch_size.py
examples/kokkos/view/: CMakeLists.txt  example_allocation.cpp  example_allocation.py  example_allocation_benchmarking.cpp  example_allocation_benchmarking.main.cpp  example_allocation_benchmarking.py  example_allocation_tracing.cpp  example_allocation_tracing.py  example_restrict.cpp  example_restrict.py
python/: .gitignore  .mypy.ini  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
python/cuda_helpers/tools/: architecture.py  binaries.py  sass.py
python/reprospect/: .pylintrc  __init__.py  case.py  main.py
python/reprospect/installers/: cuda_bindings.py  nsight_systems.py
python/reprospect/test/: case.py  cmake.py  environment.py  matchers.py  matchers_impl.py  resource_acquisition.py  sass.py
python/reprospect/tools/: architecture.py  binaries.py  cacher.py  clocks.py  device_properties.py  ncu.py  nsys.py  sass.py
python/reprospect/utils/: cmake.py  compile_command.py  detect.py  ldd.py  rich_helpers.py  subprocess_helpers.py
tests/: .mypy.ini  CMakeLists.txt  README.md  compilation.py  conftest.py  cublas.py  parameters.py  test_compilation.py  test_extensibility.py
tests/assets/: CMakeLists.txt  half.cpp  half.cu  nvtx_annotations.py  saxpy.cpp  saxpy.cu  saxpy_nil.cpp  test_graph.cpp  test_half.cpp  test_nvtx.py  test_saxpy.cpp
tests/assets/common/: cuda.hpp  cuda_runtime.hpp
tests/cpp/cuda/: CMakeLists.txt  test_graph.cpp  test_half.cu  test_saxpy.cpp
tests/cuda/: CMakeLists.txt  test_saxpy.cpp
tests/integration/: CMakeLists.txt  test_half.py
tests/nvtx/: CMakeLists.txt  test_nvtx.py
tests/python/: .mypy.ini  .pylintrc  .pytest.ini  CMakeLists.txt  compilation.py  cublas.py  parameters.py  test_compilation.py  test_extensibility.py  test_saxpy.py
tests/python/test/: CMakeLists.txt  case.py  conftest.py  test_environment.py  test_graph.py  test_half.py  test_resource_acquisition.py  test_sass.py  test_saxpy.py
tests/python/tools/: CMakeLists.txt  test_architecture.py  test_binaries.py  test_cacher.py  test_clocks.py  test_device_properties.py  test_ncu.py  test_nsys.py  test_sass.py
tests/python/utils/: CMakeLists.txt  test_cmake.py  test_compile_command.py  test_detect.py  test_subprocess_helpers.py
tests/test/: CMakeLists.txt  test_environment.py  test_graph.py  test_half.py  test_saxpy.py
tests/test/sass/: CMakeLists.txt  test_any.py  test_atomic.py  test_branch.py  test_composite.py  test_composite_impl.py  test_extensibility.py  test_instruction.py  test_load.py  test_store.py
tests/testing/: CMakeLists.txt  test_environment.py
tests/testing/binaries/: CMakeLists.txt
tests/testing/sass/: test_any.py  test_atomic.py  test_branch.py  test_composite.py  test_composite_impl.py  test_extensibility.py  test_instruction.py  test_load.py  test_store.py
tests/tools/: CMakeLists.txt  test_architecture.py  test_cacher.py  test_compile_command.py  test_device_properties.py  test_ncu.py  test_nsys.py
tests/tools/assets/: saxpy.cpp  saxpy.cu
tests/tools/binaries/: CMakeLists.txt  test_cuobjdump.py  test_demangle.py  test_demangler.py  test_elf.py  test_nvdisasm.py  test_symtab.py
tests/tools/ncu/: CMakeLists.txt  test_ncu.py
tests/tools/nsys/: CMakeLists.txt  test_nsys.py
tests/tools/sass/: test_controlflow.py  test_decode.py
tests/utils/: CMakeLists.txt  test_cmake.py  test_compile_command.py  test_detect.py  test_environment.py  test_subprocess_helpers.py  test_types.py
(+381 files in other folders)
