[build-system]
requires = [
    "setuptools",
    "mypy[mypyc]==2.3.0",

    # mypyc requires that runtime dependencies are also installed
    # during the build, since it parses the code base.
    # For now, the only solution is to copy-paste the list here.
    "attrs",
    "backports.strenum",
    "blake3",
    "cmake-file-api==0.0.8.6",
    "ijson",
    "mypy_extensions",
    "pandas",
    "pyelftools==0.33",
    "pyyaml",
    "regex",
    "rich",
    "rich-tools",
    "semantic_version",
    "system-helpers>=0.0.3",
    "typing-extensions>=4.4.0",

    # Requirements from requirements/requirements.python.txt that are required by mypyc.
    "types-regex",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "reprospect",
    "reprospect.installers",
    "reprospect.test",
    "reprospect.test.sass",
    "reprospect.test.sass.controlflow",
    "reprospect.test.sass.instruction",
    "reprospect.test.sass.matchers",
    "reprospect.tools",
    "reprospect.tools.binaries",
    "reprospect.tools.ncu",
    "reprospect.tools.nsys",
    "reprospect.tools.sass",
    "reprospect.utils",
]

[tool.setuptools.package-data]
"reprospect" = ["py.typed"]

[tool.setuptools.dynamic]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
dependencies = {file = ["requirements/requirements.txt"]}

[project]
name = "reprospect"
description = "A framework for reproducible prospecting of CUDA applications."
version = "1.0.7"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
dynamic = [
    "dependencies",
]
authors = [
  {name = "Arnst Maarten"},
  {name = "Tomasetti Romin"},
]

[project.urls]
Homepage = "https://github.com/uliegecsm/reprospect"
Documentation = "https://uliegecsm.github.io/reprospect/"

[project.scripts]
reprospect-install-cuda-bindings = "reprospect.installers.cuda_bindings:main"
reprospect-install-nsight-systems = "reprospect.installers.nsight_systems:main"
reprospect-utils-detect-gpus = "reprospect.utils.detect:main"

[tool.mypy]
follow_untyped_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

packages = ["reprospect"]

[tool.ruff]
preview = true

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["module-import-not-at-top-of-file"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
  "tests",
  "examples"
]

[tool.ruff.lint.isort.sections]
tests = ["tests"]
examples = ["examples"]

[tool.ruff.lint]
extend-select = [
    "builtin-argument-shadowing",
    "builtin-attribute-shadowing",
    "mutable-argument-default",
    "get-attr-with-constant",
    "zip-without-explicit-strict",
    "blind-except",
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "blank-line-after-function",
    "under-indentation",
    "empty-docstring",
    "docstring-extraneous-parameter",
    "docstring-extraneous-returns",
    "docstring-extraneous-yields",
    "docstring-extraneous-exception",
    "DTZ", # flake8-datetimez
    "E1",
    "whitespace-before-punctuation",
    "whitespace-after-decorator",
    "tab-before-operator",
    "tab-after-operator",
    "missing-whitespace-around-operator",
    "missing-whitespace-around-arithmetic-operator",
    "missing-whitespace-around-bitwise-or-shift-operator",
    "missing-whitespace",
    "unexpected-spaces-around-keyword-parameter-equals",
    "missing-whitespace-around-parameter-equals",
    "E4",
    "redundant-backslash",
    "E7",
    "E9",
    "commented-out-code",
    "EXE", # flake8-executable
    "F", # Pyflakes
    "FA", # flake8-future-annotations
    "boolean-type-hint-positional-argument",
    "FIX", # flake8-fixme
    "if-exp-instead-of-or-operator",
    "int-on-sliced-str",
    "I", # isort
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "numpy-deprecated-type-alias",
    "numpy-legacy-random",
    "numpy-deprecated-function",
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PLC02",
    "PT00",
    "pytest-assert-in-except",
    "PT02",
    "PT03",
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "try-except-pass",
    "duplicate-isinstance-call",
    "needless-bool",
    "suppressible-exception",
    "uncapitalized-environment-variables",
    "enumerate-for-loop",
    "SIM20",
    "SIM21",
    "yoda-conditions",
    "SIM9",
    "SLOT", # flake8-slots
    "TID", # flake8-tidy-imports
    "raise-vanilla-class",
    "type-check-without-type-error",
    "TRY2",
    "TRY3",
    "TRY4",
    "useless-metaclass-type",
    "type-of-primitive",
    "useless-object-inheritance",
    "deprecated-unittest-alias",
    "non-pep585-annotation",
    "non-pep604-annotation-union",
    "super-call-with-parameters",
    "utf8-encoding-declaration",
    "unnecessary-future-import",
    "lru-cache-without-parameters",
    "unnecessary-encode-utf8",
    "convert-typed-dict-functional-to-class",
    "convert-named-tuple-functional-to-class",
    "redundant-open-modes",
    "datetime-timezone-utc",
    "native-literals",
    "typing-text-str-alias",
    "open-alias",
    "replace-universal-newlines",
    "replace-stdout-stderr",
    "deprecated-c-element-tree",
    "os-error-alias",
    "unicode-kind-prefix",
    "deprecated-mock-import",
    "yield-in-for-loop",
    "unnecessary-builtin-import",
    "format-literals",
    "printf-string-formatting",
    "f-string",
    "extraneous-parentheses",
    "outdated-version-block",
    "quoted-annotation",
    "unnecessary-class-parentheses",
    "non-pep695-type-alias",
    "timeout-error-alias",
    "non-pep604-annotation-optional",
    "W",
    "YTT", # flake8-2020
]
ignore = [
    "root-logger-call",
    "collection-literal-concatenation",
    "assignment-in-assert",
    "float-equality-comparison",
]

[tool.pylint.main]
fail-on = [
    "I",
]
fail-under = 10

[tool.pylint."messages control"]
enable = [
    "useless-suppression",
]
disable = [
    "c-extension-no-member",
    "consider-using-dict-items",
    "line-too-long",
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "single-string-used-for-slots",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "use-maxsplit-arg",
    "use-sequence-for-iteration",
]

[tool.cibuildwheel]
build = []
archs = []

build-verbosity = 1

test-command = [
    "python -m pytest {package}/tests/test/sass/test_extensibility.py",
]
test-requires = "pytest==9.0.2"

[tool.cibuildwheel.windows]
# Improve cl.exe error messages for debugging mypyc-generated C code.
environment = { CL = "/diagnostics:caret" }
