find_package(
    Doxygen
    REQUIRED
)

set(HOMEPAGE_MD ${CMAKE_SOURCE_DIR}/README.md)

set(DOXYGEN_CITE_BIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/references.bib)
set(DOXYGEN_ENABLE_PREPROCESSING YES)
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_IMAGE_PATH ${CMAKE_SOURCE_DIR})
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_PROJECT_ICON ${CMAKE_SOURCE_DIR}/docs/source/_static/logo.svg)
set(DOXYGEN_PROJECT_LOGO ${CMAKE_SOURCE_DIR}/docs/source/_static/logo.svg)
set(DOXYGEN_REFERENCES_RELATION YES)
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_TIMESTAMP YES)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${HOMEPAGE_MD})
set(DOXYGEN_WARN_AS_ERROR YES)
set(DOXYGEN_WARN_IF_UNDOCUMENTED NO)

doxygen_add_docs(
    docs

    ${HOMEPAGE_MD}

    ${CMAKE_SOURCE_DIR}/examples
    ${CMAKE_SOURCE_DIR}/tests
)
