[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "reprospect",
    "reprospect.installers",
    "reprospect.test",
    "reprospect.tools",
    "reprospect.utils",
]

[tool.setuptools.package-dir]
"reprospect" = "reprospect"
"reprospect.installers" = "reprospect/installers"
"reprospect.test" = "reprospect/test"
"reprospect.tools" = "reprospect/tools"
"reprospect.utils" = "reprospect/utils"

[project]
name = "reprospect"
description = "A framework for reproducible prospecting of CUDA applications."
license-files = ["LICEN[CS]E*"]
requires-python = ">= 3.10"
dynamic = [
    "dependencies",
    "version",
]
authors = [
  {name = "Arnst Maarten"},
  {name = "Tomasetti Romin"},
]

[project.urls]
Homepage = "https://github.com/uliegecsm/reprospect"

[project.scripts]
reprospect-install-nsight-systems = "reprospect.installers.nsight_systems:main"
reprospect-utils-detect-gpus = "reprospect.utils.detect:main"
