[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "reprospect",
    "reprospect.installers",
    "reprospect.test",
    "reprospect.tools",
    "reprospect.utils",
]

[tool.setuptools.package-dir]
"reprospect" = "reprospect"
"reprospect.installers" = "reprospect/installers"
"reprospect.test" = "reprospect/test"
"reprospect.tools" = "reprospect/tools"
"reprospect.utils" = "reprospect/utils"

[tool.setuptools.dynamic]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
version = {attr = "reprospect.__version__"}
dependencies = {file = ["requirements.txt"]}

[project]
name = "reprospect"
description = "A framework for reproducible prospecting of CUDA applications."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dynamic = [
    "dependencies",
    "version",
]
authors = [
  {name = "Arnst Maarten"},
  {name = "Tomasetti Romin"},
]

[project.urls]
Homepage = "https://github.com/uliegecsm/reprospect"

[project.scripts]
reprospect-install-nsight-systems = "reprospect.installers.nsight_systems:main"
reprospect-utils-detect-gpus = "reprospect.utils.detect:main"

[tool.mypy]
follow_untyped_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

packages = ["reprospect"]
