[build-system]
requires = [
    "setuptools",
    "mypy[mypyc]",

    # mypyc requires that runtime dependencies are also installed
    # during the build, since it parses the code base.
    # For now, the only solution is to copy-paste the list here.
    "backports.strenum",
    "blake3",
    "cmake_file_api @ git+https://github.com/madebr/python-cmake-file-api@fc02aa8522b7f793643412124ee938f8d0dc7ef9",
    "ijson",
    "mypy_extensions",
    "pandas",
    "regex",
    "rich",
    "semantic_version",
    "system-helpers>=0.0.3",
    "typeguard",
    "typing-extensions>=4.4.0",

    # Requirements from requirements/requirements.python.txt that are required by mypyc.
    "types-regex",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "reprospect",
    "reprospect.installers",
    "reprospect.test",
    "reprospect.tools",
    "reprospect.tools.binaries",
    "reprospect.utils",
]

[tool.setuptools.package-dir]
"reprospect" = "reprospect"
"reprospect.installers" = "reprospect/installers"
"reprospect.test" = "reprospect/test"
"reprospect.tools" = "reprospect/tools"
"reprospect.tools.binaries" = "reprospect/tools/binaries"
"reprospect.utils" = "reprospect/utils"

[tool.setuptools.dynamic]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
version = {attr = "reprospect.__version__"}
dependencies = {file = ["requirements.txt"]}

[project]
name = "reprospect"
description = "A framework for reproducible prospecting of CUDA applications."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dynamic = [
    "dependencies",
    "version",
]
authors = [
  {name = "Arnst Maarten"},
  {name = "Tomasetti Romin"},
]

[project.urls]
Homepage = "https://github.com/uliegecsm/reprospect"

[project.scripts]
reprospect-install-nsight-systems = "reprospect.installers.nsight_systems:main"
reprospect-utils-detect-gpus = "reprospect.utils.detect:main"

[tool.mypy]
follow_untyped_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

packages = ["reprospect"]
